<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal">

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_typeSwitch"
            title="@string/name_bottom_measure_typeswitch"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_addVex"
            title="@string/name_bottom_addvex"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_deleteVex"
            title="@string/name_bottom_deletevex"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_delete"
            title="@string/name_bottom_delete"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>
    </LinearLayout>

</RelativeLayout>