<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="100dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_powerline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            title="@string/name_img_btn_powerline"
            titleColor="@color/white"
            android:layout_weight="1"
            ></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            title="@string/name_img_btn_channel"
            titleColor="@color/white"
            android:layout_weight="1"
            ></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_mytask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            title="@string/name_img_btn_mytask"
            titleColor="@color/white"
            android:layout_weight="1"
            ></xxzx.myView.ImgButtonVertical>

    </LinearLayout>

</RelativeLayout>