<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom"
        android:divider="@drawable/list_item_divider"
        android:dividerHeight="0.2dip"
         />


    <LinearLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_marginTop="10dip"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_black_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_selectTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="当前选中"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="horizontal">

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_select"
            title="@string/name_bottom_patrol_pline_select"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_cancel"
            title="@string/name_bottom_patrol_pline_cancel"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_task"
            title="@string/name_bottom_patrol_pline_task"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>

        <xxzx.myView.ImgButtonVertical
            android:id="@+id/imgbtn_exit"
            title="@string/name_bottom_patrol_pline_exit"
            titleColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></xxzx.myView.ImgButtonVertical>
    </LinearLayout>


</RelativeLayout>
